# appimage-installer

./: AppimageController.py  README.md  appimage-installer.desktop  setup.py
appimage_installer/: AppimageController.py  appimage-installer.desktop  appinstallerGUI.py  pyproject.toml
