[tool.poetry]
name = "AppImage Installer"
version = "0.1.0"
description = "A simple program to integrate AppImages into the GNU/Linux system."
authors = ["w-j-r"]

[tool.poetry.scripts]
gui = 'appimage_installer.appinstallerGUI:InstallerGUI'
contr = 'appimage_installer.AppimageController:Controller'

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
